fix api bug
