# internal/endpoint/request/user.go
@@ -4,21 +4,23 @@ import "QuickAuth/pkg/model"
 
 type UserReq struct {
 	UserID      int64  `json:"-" uri:"userId"`
-	UserPoolID  int64  `json:"userPoolId" uri:"userId" binding:"required"`
+	UserPoolID  int64  `json:"-" uri:"poolId"`
+	OpenId      string `json:"-"`
 	Username    string `json:"username"`
 	Password    string `json:"password"`
 	DisplayName string `json:"displayName"`
 	Email       string `json:"email"`
 	Phone       string `json:"phone"`
-	Type        string `json:"type"`
+	Type        int32  `json:"type"`
 }
 
 func (u *UserReq) ToModel() model.User {
 	return model.User{
 		ID:          u.UserID,
+		OpenID:      u.OpenId,
 		UserPoolID:  u.UserPoolID,
 		Username:    u.Username,
-		Password:    &u.Password,
+		Password:    u.Password,
 		DisplayName: &u.DisplayName,
 		Email:       &u.Email,
 		Phone:       &u.Phone,
